--- a/Урок 1. Модули в JavaScript/Задание 2/index.html
+++ b/Урок 1. Модули в JavaScript/Задание 2/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer src="index.js"></script>
+    <script></script>
+    <!-- Попробуйте реализовать логику работы функции define из системы модулей AMD (RequireJS). -->
+    <script data-main="./main.js" src="require.js"></script>
 </head>
 
 <body>
